--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,6 +1,6 @@
 footer {
 	@extend section;
-	padding: 100px 0 50px 0;
+	padding: 50px 0 0;
 	position: relative;
 	background: $html-background-color;
 	color: #fff;
@@ -32,7 +32,6 @@ footer {
 
 	.legal-line {
 		width: 100%;
-		padding: 30px 0 0 0;
 		margin: 0;
 
 		a {
