--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,15 @@ layout: misc/compress
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 
-		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/android-chrome-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
+		<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+		<link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#0055b8">
+		<meta name="msapplication-TileColor" content="#2b5797">
+		<meta name="theme-color" content="#0055b8">
+
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
