--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -2,9 +2,9 @@ strong.vb {
     color: $secondary-brand-color;
 }
 
-span.footnote {
+div.footnote {
     font-size: smaller;
-    color: #555;
+    color: #888;
 }
 
 div.footnoteborder {
