--- a/_includes/footnote.html
+++ b/_includes/footnote.html
@@ -1,1 +1,1 @@
-<span class="footnote"><div class="footnoteborder"></div>{{ include.text }}</span>
+<div class="footnote"><div class="footnoteborder"></div>{{ include.text }}</div>
